# Hashinator

./: README.md
Hashinator/: Cargo.toml  README.md
Hashinator/src/: main.rs  output.rs  patterns.rs
