[package]
name = "hashinator"
version = "1.0.1"
edition = "2021"
authors = ["NorthMatrix northmatrix@pm.me"]
description = "A tool to identify hashes blazingly fast"
repository = "https://github.com/NorthMatrix/Hashinator"
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
clap = "4.5.26"
colored = "3.0.0"
once_cell = "1.20.2"
pcre2 = "0.2.9"
